guestbook/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    io.portainer.kubernetes.ingress.owner: admin
  name: guestbook-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: guestbook.jp.mywebdata.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
status:
  loadBalancer: {}
